--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     </style>
   </head>
   <body>
+    <p>If you are not redirected, <a href="dashboard.html">click here</a>.</p>
     <div class="container">
       <h2 id="formTitle">Sign Up</h2>
       <form id="signupForm">
